# startup-opportunity-analyzer

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  deliberation_engine.md  design_decisions.md  resume.md
docs/superpowers/plans/: 2026-06-12-history-list-plan.md  (+2 more)
examples/: analyze_ai_agent.py  analyze_saas.py
examples/output/: ai_agent_analysis.md  美业智能客服Agent方向创业分析.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/components/: AgentCard.tsx  (+12 more)
src/: __init__.py  crew.py  schemas.py
src/config/: agents.yaml  settings.py  tasks.yaml
src/deliberation/: __init__.py  checkpoint.py  engine.py  evidence.py  protocol.py  rounds.py  state.py
src/storage/: __init__.py  db.py  models.py  repository.py
src/tools/: __init__.py  challenge_tool.py  search_tool.py  web_scraper.py
src/web/: __init__.py  app.py  events.py  run_registry.py  runner.py
tests/: conftest.py  test_agents.py  test_crew_rounds.py
tests/config/: test_settings.py
tests/deliberation/: test_engine.py  test_evidence.py  test_format.py  test_protocol.py  test_rounds.py  test_state.py
tests/integration/: test_end_to_end.py  test_r2_loop.py
tests/storage/: test_repository.py
tests/tools/: conftest.py  test_challenge_tool.py
tests/web/: test_events.py  test_evidence_route.py  test_health.py  test_report.py  test_resume.py  test_run_registry.py  test_runner.py  test_runs.py  test_stream.py
(+39 files in other folders)
