[project]
name = "startup-opportunity-analyzer"
version = "0.1.0"
description = "基于CrewAI的多智能体创业机会分析系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.0",
    "tokenizers>=0.21,<1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
