[project]
name = "startup-opportunity-analyzer"
version = "0.1.0"
description = "基于CrewAI的多智能体创业机会分析系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.14.0",
    "crewai-tools>=1.14.0",
    "tokenizers>=0.21,<1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
